# nt2

./: .gitignore  CMakeLists.txt  larrabee.txt
cmake/: FindNT2.cmake  NT2Module.cmake  UseNT2.cmake  nt2.download.cmake
doc/: nt2.qbk
modules/arch/powerpc/arithmetic/: CMakeLists.txt
modules/arch/powerpc/bitwise/: CMakeLists.txt
modules/arch/powerpc/ieee/: CMakeLists.txt
modules/arch/powerpc/operator/: CMakeLists.txt
modules/arch/powerpc/predicates/: CMakeLists.txt
modules/arch/powerpc/reduction/: CMakeLists.txt
modules/arithmetic/doc/: isqrt.py
modules/dd_reals/: CMakeLists.txt
modules/dd_reals/bench/: CMakeLists.txt
modules/dd_reals/bench/scalar/: CMakeLists.txt
modules/dd_reals/bench/simd/: CMakeLists.txt
modules/dd_reals/doc/: plus.py  splat.doc  two_sum.py  unary_minus.py
modules/dd_reals/src/: CMakeLists.txt
modules/dd_reals/unit/: CMakeLists.txt
modules/dual/: CMakeLists.txt  py_data.py
modules/dual/bench/: CMakeLists.txt
modules/dual/doc/: store.py  two_split.py  two_sqr.py
modules/dual/src/: CMakeLists.txt
modules/dual/unit/: CMakeLists.txt
modules/lrb/: CMakeLists.txt
modules/lrb/cmake/: nt2.lrb.dependencies.cmake
modules/streflop/: CMakeLists.txt
modules/streflop/bench/: CMakeLists.txt
modules/streflop/cover/: CMakeLists.txt
modules/streflop/src/: CMakeLists.txt
modules/streflop/unit/: CMakeLists.txt
modules/trigonometric/cmake/: nt2.trigonometric.dependencies.cmake
sandbox/: CMakeLists.txt  tostring.cpp
tools/is_supported/: CMakeLists.txt
tools/postconfigure/: postconfigure.cpp
(+3624 files in other folders)
